unpackaged/objects/LSIG_Oppty_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo_Owner__c</fullName>
        <label>OpCo Owner</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo_Stage__c</fullName>
        <label>OpCo Stage</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Region__c</fullName>
        <label>Opportunity Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <inlineHelpText>Keep empty if no RT to be assigned.</inlineHelpText>
        <label>Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LSIG Oppty Setting</label>
    <pluralLabel>LSIG Oppty Settings</pluralLabel>
</CustomObject>